syntax = "proto3";

package routes_service;

service RoutesService {
  rpc CreateRoute (CreateRouteDTO) returns (CreateRouteResponse);
  rpc FindAllRoutes (EmptyMessage) returns (FindAllRoutesResponse);
  rpc UpdateRoute (UpdateRouteDTO) returns (UptateRouteResponse);
  rpc DeleteRoute (DeleteRouteDTO) returns (DeleteRouteResponse);
  rpc FindAllLocations (EmptyMessage) returns (FindAllLocationsResponse);
}

// Requests
message CreateRouteDTO {
  string startId = 1;
  string endId = 2;
}

message LocationDTO {
  string id = 1;
  string name = 2;
  double latitude = 3;
  double longitude = 4;
}

message UpdateRouteDTO {
  string routeId = 1;
  string startId = 2;
  string endId = 3;
}

message DeleteRouteDTO {
  string routeId = 1;
}


// Responses
message CreateRouteResponse {
  string routeId = 1;
  LocationDTO start = 2;
  LocationDTO end = 3;
}

message UptateRouteResponse {
  string routeId = 1;
  LocationDTO start = 2;
  LocationDTO end = 3;
}

message RouteResponse {
  string routeId = 1;
  LocationDTO start = 2;
  LocationDTO end = 3;
}

message FindAllRoutesResponse {
  repeated RouteResponse routes = 1;
}

message DeleteRouteResponse {
  string routeId = 1;
  bool deleted = 2;
}

message FindAllLocationsResponse {
  repeated LocationDTO locations = 1;
}

message EmptyMessage {}